@@ -95,6 +95,7 @@ docker {
         baseImage = 'azul/zulu-openjdk:17-latest'
         maintainer = 'Mantis Developers "mantis-oss-dev@netflix.com"'
         mainClassName = 'io.mantisrx.server.master.MasterMain'
+        applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/sun.net.util=ALL-UNNAMED']
         images = ["$imageRepository/mantiscontrolplaneserver:latest"]
         ports = [8100]
     }
